--- a/facapedidos/application/modules/portal/views/scripts/cliente/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/cliente/index.phtml
@@ -46,7 +46,7 @@
 	* Confirme senha: <input type="password" class="input-medium RQR required" tithe="Por favor, repita a senha." id="senha_repetida" name="cliente[senha_repetida]">
 	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
 	<br>
-	* Telefone para contato com DDD: <input type="text" maxlength="14" onkeypress="return formataTelefone(document.form1, 'cliente[telefone]', '(99) 9999-9999', event)" class="input-medium RQR required" title="Por favor, indique um telefone." name="cliente[telefone]" value="<?php $this->cliente['telefone'] ?>">
+	* Telefone celular com DDD: <input type="text" maxlength="14" onkeypress="return formataTelefone(document.form1, 'cliente[telefone]', '(99) 9999-9999', event)" class="input-medium RQR required" title="Por favor, indique um telefone." name="cliente[telefone]" value="<?php $this->cliente['telefone'] ?>">
 	<br><br>
 	<input type="checkbox"  id="aceite" name="cliente[aceite]" checked> Estou de acordo com os <a href="#">termos e condicões </a> do site.
 
