--- a/facapedidos/application/modules/portal/views/scripts/pedido/concluir-compra.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/pedido/concluir-compra.phtml
@@ -208,7 +208,7 @@
 	E-mail para contato sobre essa compra: <?php echo $this->emailCliente ?>
 
 	<br><br>
-	* Telefone com DDD: <input type="text" maxlength="14" onkeypress="return formataTelefone(document.form1, 'endereco[telefone]', '(99) 9999-9999', event)" name="endereco[telefone]" class="RQR required" title="Por favor, indique um telefone." value="<?php echo $this->telefoneCliente ?>">
+	* Telefone celular com DDD: <input type="text" maxlength="14" onkeypress="return formataTelefone(document.form1, 'endereco[telefone]', '(99) 9999-9999', event)" name="endereco[telefone]" class="RQR required" title="Por favor, indique um telefone." value="<?php echo $this->telefoneCliente ?>">
 	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
 	<br>
 	* Rua: <input type="text" name="endereco[rua]" title="Por favor, informe a rua." class="RQR required validAlphaNumeric">
